<resources>
    <string name="app_name">My Virtual Planner</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log Out</string>
    <string name="about_us">About us</string>
    <string name="name">Your name</string>
    <string name="email"> email@email.com</string>
    <string name="subject">Subject</string>
    <string name="exam">Exam</string>
    <string name="assignments">Assignments</string>
    <string name="subjects">Subjects</string>
    <string name="personal">Personal</string>
    <string name="misc">Misc.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="add_sub">Add a subject...</string>
    <string name="icon_notice">&#xf35b;</string>
    <string name="mainscreen_task1">Assignment in two days</string>
    <string name="mainscreen_task2">Internal Exams Preparation</string>
    <string name="mainscreen_task3">Code Busters</string>
    <string name="mainscreen_task4">Project Presentation</string>
    <string name="title_activity_detail">detailActivity</string>
    <string name="exam_details">TextView</string>
    <string name="title_activity_subjects">Subjects</string>
    <string name="clashAssExm">You have clash between exam and assignment, Complete Assignment soon</string>
    <string name="clashEventExm">Your exam(s) seem to clash with a certain contest, You need to read for exams soon</string>
    <string name="clashEventAss">You have assignments due, and you also need to prepare for contest. Need to sort this out</string>
    <string name="clashExmEverything">You have stuff pending during exam preparation time. Careful</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="doAss">Assignments needs to be done now, stuff to do</string>
    <string name="sign_up">Sign up with email</string>

    <string name="action_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="signUpAccount">Do not have an account? Create one!</string>
    <string name="desc_01">Using this app you can concentrate more on studies. With an emphasis on students our app is built on the principle of time is money.</string>
    <string name="desc_02">Our app uses an intelligent algorithm to determine what is important at the moment and suggests you on what to do next. With this feature you will always be on top of whatever this college life throws at you.</string>
    <string name="desc_03">With this app you can not only give more time to your studies but you can actually enjoy your college life. A moment that is saved from studying can now be used to enjoy, go out with friends, or play video games because you lack any. Choice is yours.</string>
</resources>
