<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.teamseven.myvirtualplanner.MainActivity">

    <include layout="@layout/top_toolbar"/>

    <TextView
        android:id="@+id/notice"
        android:layout_width="321dp"
        android:layout_height="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/shadow"
        android:elevation="20sp"
        android:padding="10sp"
        android:text="@string/icon_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="324dp"
        android:layout_height="270dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/mainscreen_tv4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5sp"
                android:background="@drawable/mainscreen_shadow1"
                android:elevation="20sp"
                android:padding="10sp"
                android:text="@string/mainscreen_task4" />

            <TextView
                android:id="@+id/mainscreen_tv3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5sp"
                android:background="@drawable/mainscreen_shadow1"
                android:elevation="20sp"
                android:padding="10sp"
                android:text="@string/mainscreen_task3" />

            <TextView
                android:id="@+id/mainscreen_tv2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5sp"
                android:background="@drawable/mainscreen_shadow1"
                android:elevation="20sp"
                android:padding="10sp"
                android:text="@string/mainscreen_task2" />

            <TextView
                android:id="@+id/mainscreen_tv1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5sp"
                android:background="@drawable/mainscreen_shadow1"
                android:elevation="20sp"
                android:padding="10sp"
                android:text="@string/mainscreen_task1" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

