<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        app:srcCompat="@drawable/icon"/>


    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_action_email"
        android:background="#353639"
        android:textSize="16sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_pass"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_email"
        android:layout_marginTop="35dp"
        android:background="#353639"
        android:textSize="16sp"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:id="@+id/register_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:hint="@string/prompt_password_again"
        android:textSize="16sp"
        android:ems="10"
        android:background="#353639"
        android:drawableStart="@drawable/ic_action_pass"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_sign_up_button"
        android:layout_below="@id/register_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/action_sign_up"
        android:background="#00000000"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginTop="300sp"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />



</RelativeLayout>