<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/loginActivity"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        app:srcCompat="@drawable/icon" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_action_email"
        android:background="#353639"
        android:textSize="16sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_pass"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email"
        android:layout_marginTop="35dp"
        android:background="#353639"
        android:textSize="16sp"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_sign_in_button"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/action_sign_in"

        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/email_sign_in_button"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/signUpAccount"
        android:layout_marginTop="10dp"
        android:textColor="#D7DBDD"
        android:id="@+id/signUpBtn"
        android:background="#00000000"
        />
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_marginTop="300sp"
        style="?android:attr/progressBarStyleLarge"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</RelativeLayout>